fix: Add z-index for nav ul

--- a/client/src/Layout/NavBar/NavBar.css
+++ b/client/src/Layout/NavBar/NavBar.css
@@ -19,6 +19,8 @@
     display: flex;
     align-items: center;
     gap: 1.5rem;
+
+    z-index: 1;
 }
 
 .nav-li{
